tests/ui/outer-attr.stderr
error: attribute must be applied to a `static` variable
 --> tests/ui/outer-attr.rs:8:5
  |
8 |     #[used(linker)]
  |     ^^^^^^^^^^^^^^^
9 |     Thing
  |     ----- but this is a expression
